K8s/deployment-and-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: express-api
---
apiVersion: v1
kind: Deployment
metadata:
  name: express-api
  labels:
    app: express-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express-api
  template:
    metadata:
      labels:
        app: express-api
    spec:
      containers:
        - name: express-api
          image: serverlab/express-api:1.0.0
