K8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: express-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.express.info
    http:
      paths:
      - backend:
          serviceName: express-api
          servicePort: 80
